--- a/introduction.tex
+++ b/introduction.tex
@@ -23,8 +23,16 @@ A number of algorithms exist that offer predictions as to the deleteriousness of
 While the three tools succeed in making good predictions, their reliability is unfortunately still not high enough to serve as a basis of clinical decision making. Song Sun and other members of the Roth Lab recently performed an independent comparison of these tools on a set of well established disease-causing variants as well as rare polymorphisms with no known disease association~\cite{sun_extended_2016}. A high precision (the fraction of correct classifications out of all positive classifications) can be considered especially important when considering taking clinical action based on a prediction. When compared at a minimum precision level of 90\%, PolyPhen-2 and PROVEAN only reach a sensitivity of 19\% and 21\%, respectively (where sensitivity is defined as the fraction of correct classifications out of all real existing disease variants). SIFT was not even capable of achieving 90\% precision at any score threshold.
 
 \section{Laboratory approaches to variant function assessment}
+\label{complY2HIntro}
 
 An alternative to computational prediction for variant assessment is the use of laboratory assays. Many different types of assays exist that can yield potential insight into the effects of missense variants on protein function. However many of them, such as enzymatic activity assays need to be performed one by one and are not easily scalable. Two particularly useful assays in this respect are Yeast-2-Hybrid and functional complementation.
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\textwidth]{img/compl_y2h.pdf}
+	\caption{Complementation and Yeast-2-Hybrid. A) Complementation: Deletion of gene X in yeast results in a fitness defect, that is rescued by expression of X's human orthologue. A damaging variant of human X results in loss of complementation. B) Yeast-2-Hybrid: Strains carrying fusion of ORF X to Gal4-DB and ORF Y to Gal4-AD are mated. A successful interaction between X and Y in the diploid progeny results in reconstitution of Gal4 and thus in the expression of the HIS3 reporter, allowing for auxotrophy selection.}
+	\label{fig:compl_y2h}
+\end{figure}
 
 Yeast-2-Hybrid (Y2H)~\cite{fields_novel_1989} is a binary protein interaction assay performed within the yeast \species{Saccharomyces cerevisiae}. It is based on the reconstitution of two fragments of the transcription factor Gal4. The Gal4 protein comprises two domains: A DNA-binding (DB) domain and an activating domain (AD) both are required for it to successfully associate with its cognate promoter region and induce expression of a reporter gene downstream of the promoter. When two proteins X and Y are fused to the DB and AD domain respectively, an prospective interaction between X and Y leads to the reconstitution of the transcription factor and subsequently to reporter expression. In most cases, the reporter is an auxotrophy marker, such as \gene{HIS3}, thus linking the ability of the two proteins to interact with each other to the ability of the yeast strain to grow on selective media. When comparing different variants of the same protein interacting with the same partner, reporter expression has even been shown to be proportional to binding affinity~\cite{yang_protein-peptide_1995}. This allows for quantitative interpretation of Y2H results under these specific circumstances. 
 
@@ -36,12 +44,6 @@ Y2H does however suffer from a number of drawbacks. Due to the the transcription
 When considering Y2H as an assay for variant function assessment it is important to consider that it does not measure all aspects of a protein's functionality, but rather only its ability to physically associate with a given interaction partner. Thus only variants that result either in major failures in protein folding or in changes to the binding binding interface could be detected. However, in a recent examination of the Y2H performance of common disease associated variants, we found that approximately two out of three disease variants manifest in such a way~\cite{sahni_widespread_2015}. 
 
 
-\begin{figure}[h!]
-	\centering
-	\includegraphics[width=\textwidth]{img/compl_y2h.pdf}
-	\caption{Complementation and Yeast-2-Hybrid}
-	\label{fig:compl_y2h}
-\end{figure}
 %Discuss Edgotyping?
 
 Nonetheless, an assay that can measure the overall functionality of a protein within the cell would be preferable. Functional complementation in yeast~\cite{lee_complementation_1987,osborn_rescuing_2007} offers such an option. It based on the premise that some human genes can be used to rescue the deletion of their orthologues in yeast. That is, a fitness defect resulting from the inactivation of the yeast gene is alleviated by the artificial expression of the human gene. Therefore, any relative changes in fitness upon expressing a variant of the human gene can be interpreted as the variant's effect on the protein's overall ability to function. Song Sun and other members of the Roth Lab have recently examined the applicability of functional complementation in yeast to the assessment of disease variants~\cite{sun_extended_2016}. They have found an astonishing predictive capacity despite yeast and humans being diverged by a 1.5 billion year. Yeast complementation outperformed \textit{in silico} methods like PolyPhen-2 and PROVEAN in terms of disease variant prediction by a wide margin. At the 90\% specificity threshold discussed in section~\ref{insilicoIntro}, the complementation assay achieved a sensitivity of over 60\% (as compared to 19\% and 21\% for the two \textit{in silico} methods, respectively).
@@ -53,7 +55,7 @@ The only major drawback of yeast complementation is that currently only 60 human
 
 \section{Deep Mutational Scanning}
 
-Complementation and Y2H promise to be useful tools in the classification of variants of uncertain significance. Yet applying them to retroactively test variants only once they have been found in the clinic would be a slow process. Instead, a proactive approach could prove to be more useful: Building an atlas of the functional effects of all possible variants before they are even seen in the clinic. This would require a massive parallelization of the assays. Indeed such parallelization efforts have previously been described, albeit not for the classification of VUS. Fowler and Fields have pioneered a technology called Deep Mutational Scanning (DMS)~\cite{fowler_high-resolution_2010}, which can be thought of as a natural extension to Alanine Scanning~\cite{cunningham_high-resolution_1989}, expanding it into the space of all possible amino acid changes. Fowler and Field's original paper has since inspired a fair number of similar efforts by other groups~\cite{ernst_coevolution_2010,fujino_robust_2012,adkar_protein_2012,mclaughlin_jr_spatial_2012,schlinkmann_critical_2012,whitehead_optimization_2012,traxlmayr_construction_2012,wu_systematic_2013,roscoe_analyses_2013,starita_activity-enhancing_2013,procko_computational_2013,tinberg_computational_2013,jiang_latent_2013,kim_high-throughput_2013,melamed_deep_2013,forsyth_deep_2013,wagenaar_resistance_2014,firnberg_comprehensive_2014,olson_comprehensive_2014,melnikov_comprehensive_2014,thyagarajan_inherent_2014,stiffler_evolvability_2015,doud_site-specific_2015,kitzman_massively_2015,starita_massively_2015,mishra_systematic_2016,doud_accurate_2016,mavor_determination_2016} (See Table~\ref{table:DMSstudies}). However, when considering these studies in the context of VUS classification, a number issues become apparent. Many of these have primarily used DMS in the context of biochemistry. The assays underlying different DMS studies are quite diverse and measure different aspects of a protein’s behaviour. As a consequence, they cannot be easily compared with each other. In addition, the achieved coverage of possible amino acid changes varies from map to map. Finally, many maps to do not control the quality of measurements. Therefore, the confidence levels underlying different parts of these maps are often unknown. A generalized framework that would allow for the construction of comparable, high-quality maps representing overall protein function would be of great utility.
+Complementation and Y2H promise to be useful tools in the classification of variants of uncertain significance. Yet applying them to retroactively test variants only once they have been found in the clinic would be a slow process. Instead, a proactive approach could prove to be more useful: Building an atlas of the functional effects of all possible variants before they are even seen in the clinic. This would require a massive parallelization of the assays. Indeed such parallelization efforts have previously been described, albeit not for the classification of VUS. Fowler and Fields have pioneered a technology called Deep Mutational Scanning (DMS)~\cite{fowler_high-resolution_2010}, which can be thought of as a natural extension to Alanine Scanning~\cite{cunningham_high-resolution_1989}, expanding it into the space of all possible amino acid changes. Fowler and Field's original paper has since inspired a fair number of similar efforts by other groups~\cite{ernst_coevolution_2010,fujino_robust_2012,adkar_protein_2012,mclaughlin_jr_spatial_2012,schlinkmann_critical_2012,whitehead_optimization_2012,traxlmayr_construction_2012,wu_systematic_2013,roscoe_analyses_2013,starita_activity-enhancing_2013,procko_computational_2013,tinberg_computational_2013,jiang_latent_2013,kim_high-throughput_2013,melamed_deep_2013,forsyth_deep_2013,wagenaar_resistance_2014,firnberg_comprehensive_2014,olson_comprehensive_2014,melnikov_comprehensive_2014,thyagarajan_inherent_2014,stiffler_evolvability_2015,doud_site-specific_2015,kitzman_massively_2015,starita_massively_2015,mishra_systematic_2016,doud_accurate_2016,mavor_determination_2016}. Table~\ref{table:DMSstudies}) lists a selection of previous studies that showcase the breadth of methodologies. \todo{Remove less important papers from table in favor of more seminal ones.}
 
 
 \begin{landscape}
@@ -66,29 +68,24 @@ Complementation and Y2H promise to be useful tools in the classification of vari
 \end{landscape}
 
 
-Nonetheless, the existing studies allow for a survey of available methodologies and the structures they have in common. Deep Mutational Scanning can be broken down into a number of experimental and computational steps: (1) Mutagenesis; (2) Library construction; (3) Selection of functional mutants; (4) Sequencing of the pre- and post-selection libraries; and (5) Statistical analysis to determine the quantitative enrichment resulting from the selection. 
+Deep Mutational Scanning as performed in these existing studies can be broken down into a number of experimental and computational steps: (1) Mutagenesis; (2) Selection of functional variants; (3) Sequencing of the selected and control populations; and (4) Computational analysis.
 
-\begin{table}
-	\centering
-	\caption{Experimental steps in Deep Mutational Scanning}
-	\label{table:DMSphases}
-	\begin{tabular}{l p{10cm}}
-	\textbf{Step}                & \textbf{Options} \\ \hline \hline
-	Step 1: Mutagenesis          & Error-prone PCR, Kunkel, Oligo Array, Gene Synthesis\\ 
-	Step 2: Library construction & Gibson Assembly, Gateway\\ 
-	Step 3: Selection            & Complementation, Y2H, Phage display, Viral replication\\ 
-	Step 4: Sequencing           & BarSEQ, Deep Sequencing\\ 
-	Step 5: Analysis             & Enrich2\\ 
-	\end{tabular}
-\end{table}
+% \begin{table}
+% 	\centering
+% 	\caption{Experimental steps in Deep Mutational Scanning}
+% 	\label{table:DMSphases}
+% 	\begin{tabular}{l p{10cm}}
+% 	\textbf{Step}                & \textbf{Options} \\ \hline \hline
+% 	Step 1: Mutagenesis          & Error-prone PCR, Kunkel, Oligo Array, Gene Synthesis\\ 
+% 	Step 2: Library construction & Gibson Assembly, Gateway\\ 
+% 	Step 3: Selection            & Complementation, Y2H, Phage display, Viral replication\\ 
+% 	Step 4: Sequencing           & BarSEQ, Deep Sequencing\\ 
+% 	Step 5: Analysis             & Enrich2\\ 
+% 	\end{tabular}
+% \end{table}
 
-%error prone polymerase
-%oxidized nucleotides
-%kunkel + pfunkel
-%PCR with array oligos or degenerate oligos
-%gene synthesis
 
-\textbf{Step 1: Mutagenesis} There are a number of saturation mutagenesis methods that have previously been applied in DMS studies. The simplest method is error-prone PCR amplification~\cite{firstErrorPronePCR,mohan_pcr_2011}. While this has the advantage of being an inexpensive and facile procedure, it will only result in the generation of point mutations and as such will not generate all possible amino acid replacements. One may argue that the evaluation of VUS does not require insight into mutations outside of this set, however at the expense of potentially valuable biochemical insights. 
+\paragraph{Mutagenesis approaches:} There are a number of saturation mutagenesis methods that have previously been applied in DMS studies. The simplest method is error-prone PCR amplification~\cite{firstErrorPronePCR,mohan_pcr_2011}. While this has the advantage of being an inexpensive and facile procedure, it will only result in the generation of point mutations and as such will not generate all possible amino acid replacements. One may argue that the evaluation of VUS does not require insight into mutations outside of this set, however at the expense of potentially valuable biochemical insights. 
 
 Another set of methods often employed are scaled up site-directed mutagenesis approaches~\cite{seyfang_multiple_2004,firnberg_pfunkel_2012,}~\todo{PALS}; with one popular example being Kunkel mutagenesis~\cite{kunkel_rapid_1985}. It uses a special strain of \species{E.~coli} that has been modified to produce high levels of uradine and lacks the ability to excise uracil bases from DNA. A phage vector carrying the desired template sequence is transfected into the cells resulting in its replication with a high uracil incorporation rate. The thus uracilated template can be PCR amplified with primers containing the mutations of interest and subsequently amplified in regular \species{E.~coli} which will degrade the uracilated template, thus enriching the mutant copies. A number of derivatives of Kunkel mutagenesis have since been developed to bring its output to a scale supporting saturated libraries, most notably Pfunkel~\cite{}.%http://dx.doi.org/10.1371/journal.pone. 0052031   
 To address the full spectrum of amino acids at a given position, oligonucleotides carrying degeneracy codons~\cite{pal_methods_2005} are often used. Particularly popular is the use of NNK and NNS degeneracies, which have long been used in biochemistry~\cite{scott_searching_1990,barbas_semisynthetic_1992}. Here, S denotes either Guanine or Cytosine and K denotes either Guanine or Thymine in the third position of the codon. Either of these codes only allow 32 of all 64 possible codons to be formed, they do cover all 20 possible amino acids, but avoid two of the three possible stop codons (opal and ochre). A more recent development is the use of custom oligonucleotide arrays covering all possible (or desired) options of codon changes~\cite{kitzman_massively_2015} explicitly rather than relying on degeneracy. While this option allows for the precise control of desired mutations, it is currently too expensive to be applicable for more than a handful of genes at a time.
@@ -98,22 +95,29 @@ In this method, rather than using PCR amplification amplification, oligo cassett
 
 Finally, complete variant libraries are also becoming commercially available via gene synthesis~\cite{kosuri_scalable_2010}. While this method is certainly the most convenient, it is by far the most expensive option. 
 
-\textbf{Step 2: Library construction} Library construction is the second step in any DMS experiment. \todo{Mention en masse cloning via gateway or Gibson assembly. Survey methods in the list of papers.}
-The design of the library is dependent on the type of selection and sequencing used in the later steps. Some methods require mutants to be tagged with molecular barcodes, i.e. short unique DNA sequences inserted at a known location that allow identification of a molecule with just a single sequencing read. While the use of barcodes greatly simplifies the readout of the selection result it does require that the contents of the library are catalogued at the time of construction.
+% \textbf{Step 2: Library construction} Library construction is the second step in any DMS experiment. \todo{Mention en masse cloning via gateway or Gibson assembly. Survey methods in the list of papers.}
+% The design of the library is dependent on the type of selection and sequencing used in the later steps. Some methods require mutants to be tagged with molecular barcodes, i.e. short unique DNA sequences inserted at a known location that allow identification of a molecule with just a single sequencing read. While the use of barcodes greatly simplifies the readout of the selection result it does require that the contents of the library are catalogued at the time of construction.
 
-\textbf{Step 3: Selection} Step three of a DMS procedure is the selection of mutants that pass a given assay. The assays previously employed in DMS studies can be sorted into three broad categories: (i) \textit{In~vitro} display methods (such as Phage Display or Ribodisplay); (ii) Cell sorting based on fluorescence labeled reporters; and (iii) competition methods that couple a protein property under investigation (such as molecular interactions, toxicity, or overall functionality) to host fitness. 
-Phage display~\todo{cite} and ribodisplay~\todo{cite} couple the genetic information encoding a given variant to the physical protein itself and select according to the protein's ability to bind to a fixed interactor. Variants that are unable to bind are washed away and thus depleted. In the case of phage display, this can be done in multiple rounds, as the phage containing the associated genetic information can be propagated in bacteria. Fowler and colleagues employed phage display in their seminal DMS study with respect to the binding of the YAP65-WW domain to its cognate peptide sequence~\cite{fowler_high-resolution_2010}.
+\paragraph{Selection approaches:} The next step of a DMS procedure is the selection of mutants that pass a given assay. The assays previously employed in DMS studies can be sorted into three broad categories: (i) \textit{In~vitro} display methods (such as Phage Display or Ribodisplay); (ii) competition-based methods that couple a protein property under investigation (such as molecular interactions, toxicity, or overall functionality) to host fitness; and (iii) Cell sorting based on fluorescence labeled reporters.
+
+Phage display~\todo{cite} and ribodisplay~\todo{cite} couple the genetic information encoding a given variant to the physical protein itself and select according to the protein's ability to bind to a fixed interactor. Variants that are unable to bind are washed away and thus depleted. This can be done in multiple rounds, as the associated genetic information can be replicated again after selection (via viral propagation in bacteria for phage display or via PCR in ribodisplay). Fowler and colleagues employed phage display in their seminal DMS study with respect to the binding of the YAP65-WW domain to its cognate peptide sequence~\cite{fowler_high-resolution_2010}. However, since display methods are only feasible for small proteins or fragments thereof, more recent studies have employed more scalable methods.
+
+The most frequently applied selection mechanisms are fitness based. In these cases a particular property of the variant protein is coupled to its host cell's ability to thrive in competitive growth. Yeast-2-Hybrid and functional complementation (as introduced in section~\ref{complY2HIntro}) are two examples of such methods. While Y2H couples fitness to the ability of the protein to maintain a specific protein-protein interaction, complementation does so for the proteins overall ability to perform its biological role. A popular condition-dependent extension to complementation is selection according to drug resistance~\cite{wu_systematic_2013,wagenaar_resistance_2014}. But other fitness-based selection methods have been used in DMS as well. For example, Adkar and colleagues used the toxicity of CCDB in \species{E.~coli}~\cite{adkar_protein_2012}, while Kim and colleagues select according to degron activity by fusing the degron to an auxotrophic marker~\cite{kim_high-throughput_2013}. Finally, a number of DMS studies have been performed on viral genes, by selecting for virus propagation efficiency~\cite{bloom_2014,thyagarajan_inherent_2014}.
+
+Finally, another selection mechanism is the use of fluorescence-activated cell sorting (FACS). Here surface markers whose presence scale with the activity of the studied protein are targeted with fluorescently labeled antibodies, such that cells can be sorted accordingly~\cite{schlinkmann_critical_2012,majithia_2016}.
 
 
-\textbf{Step 4: Sequencing} The fourth step in the procedure is sequencing. 
+\paragraph{Sequencing strategies:} The following step in a DMS experiment is sequencing. In many cases this is simply done by deep shotgun sequencing of the library. A problem with approach however is that each read must be considered by itself, making it difficult to distinguish real mutations from sequencing error. 
 
-%The original method used phage display as a method of selection on an exhaustive library of mutant proteins followed by deep sequencing to identify which mutant proteins were enriched in the process. While the original method was developed as an extension to alanine scanning~\cite{alanineScanning} in the pursuit of biochemical insights, it can certainly be adapted to work with other selection methods such as Y2H and complementation. Indeed, \todo{Who?} and colleagues have recently adapted it to the use of complementation as a means of selection.
+
+When considering these studies in the context of VUS classification, a number issues become apparent. Many of these have primarily used DMS in the context of biochemistry. The assays underlying different DMS studies are quite diverse and measure different aspects of a protein’s behaviour. As a consequence, they cannot be easily compared with each other. In addition, the achieved coverage of possible amino acid changes varies from map to map. Finally, many maps to do not control the quality of measurements. Therefore, the confidence levels underlying different parts of these maps are often unknown. A generalized framework that would allow for the construction of comparable, high-quality maps representing overall protein function would be of great utility.
+
 % \section{Edgotyping}
 
 \section{Background: The Sumoylation Pathway}
 \label{intro:sumoylation}
 
-In the following chapters, we will evaluate the performance of sequence-function technology such as Deep Mutational Scanning with respect to its ability to detect effects not only on overall function but individual subfunction. Beyond the amenability of the proteins to the employed assays, an ideal testing ground would be comprised of a biological system that is both mechanistically complex and has been well studied previously in terms of structure and mechanism. The Sumoylation life cycle does not only fulfill these criteria, but is also of great biological importance. Sumoylation is a protein modification in which a small ubiquitin-like modifier (SUMO) is covalently attached to target proteins in order to modulate their behavior, especially in terms of localization and physical interactions~\cite{sumoylation}. Sumoylation plays an important role in a large number of cellular processes. It is therefore not surprising that the core members of the pathway are essential genes~\todo{REF}.
+In the following chapters, we will evaluate the performance of Deep Mutational Scanning with respect to its ability to detect effects not only on overall function but individual subfunction. Beyond the amenability of the proteins to the employed assays, an ideal testing ground would be comprised of a biological system that is both mechanistically complex and has been well studied previously in terms of structure and mechanism. The Sumoylation life cycle does not only fulfill these criteria, but is also of great biological importance. Sumoylation is a protein modification in which a small ubiquitin-like modifier (SUMO) is covalently attached to target proteins in order to modulate their behavior, especially in terms of localization and physical interactions~\cite{sumoylation}. Sumoylation plays an important role in a large number of cellular processes. It is therefore not surprising that the core members of the pathway are essential genes~\todo{REF}.
 
 \begin{figure}
 	\centering
